--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,4 @@ services:
       - /app/node_modules
     stdin_open: true
     tty: true
+    command: /bin/sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 8080"
