--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,26 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
+
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Log in to DigitalOcean Docker Registry
       - name: Log in to DigitalOcean Docker Registry
         run: echo "${{ secrets.DIGITALOCEAN_API_TOKEN }}" | docker login registry.digitalocean.com -u do --password-stdin
 
-      # Step 4: Build, stop and clean the existing images and containers
       - name: Build and Push with docker-compose
         run: |
           docker compose down -v
           docker compose up --build
-          docker compose push
+          docker tag linktic-front registry.digitalocean.com/linktic-registry/linktic-front:latest
+          docker push registry.digitalocean.com/linktic-registry/linktic-front:latest
 
-      # Step 5: (Opcional) Deploy to DigitalOcean
       - name: Deploy to DigitalOcean
         run: |
           echo "Deploy step here"
