--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build and Push with docker-compose
         run: |
           docker compose down -v
-          docker compose up --build
+          docker compose up -d --build
           docker tag linktic-front registry.digitalocean.com/linktic-registry/linktic-front:latest
           docker push registry.digitalocean.com/linktic-registry/linktic-front:latest
 
